# flathub-cli

./: Cargo.toml
doc/: design.md  manual.md
src/: builder.rs  clone.rs  error.rs  flathub.rs  main.rs  project.rs  repo.rs
src/cmd/: cleanup.rs  clone.rs  init.rs  manifest.rs  mod.rs
src/manifest/: config.rs  flathub.rs  metainfo.rs  mod.rs  module.rs  sdk_extension.rs
src/manifest/tui/: mod.rs  prompt.rs
