[package]
name = "flathub-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for Flathub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = [ "derive" ] }
dialoguer = "0.11.0"
git2 = "0.18.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.107", features = [ "preserve_order" ] }
thiserror = "1.0.49"
toml = "0.8.2"
xmlwriter = "0.1.0"
